--- a/latex/trabalhos-ppgmus.sty
+++ b/latex/trabalhos-ppgmus.sty
@@ -7,6 +7,7 @@
 \usepackage{subfig}
 \usepackage{url}
 \usepackage{color}
+\usepackage{parskip}
 
 \interfootnotelinepenalty=10000
 \clubpenalty=10000
