--- a/templates/template-genos-technical-report.tex
+++ b/templates/template-genos-technical-report.tex
@@ -1,15 +1,24 @@
 \documentclass{genos-technical-report}
-\usepackage[brazil]{babel}
+%% uncomment if portuguese paper
+%% \usepackage[brazil]{babel}
 
-\title{Os \textit{technical report} do Genos}
-\author{Pedro Kröger, Marcos Sampaio}
+\title{The Genos technical report}
+\author{Pedro Kröger\inst{1}, Marcos Sampaio\inst{2}}
+\address{Genos Research Group \\
+  Escola de Música da Universidade Federal da Bahia \\
+  Salvador, Brazil
+  \nextinstitute
+  Second institution name\\
+  Second institution address
+  \email{pedro.kroger@gmail.com, mdsmus@gmail.com}
+}
 
-\TRyear{2010}
+\TRyear{December, 2010}
 \TRnumber{1}
 
 \begin{document}
 
-\capa{}
+\cover{}
 
 \section{Introduction}
 \label{sec:introduction}
@@ -80,8 +89,8 @@ sollicitudin.
     1 & 2 & 3 \\
     1 & 2 & 3
   \end{tabular}
-  \caption{Duas colunas}
-  \label{tab:duas}
+  \caption{Two column}
+  \label{tab:two}
 \end{table}
 
 \section{Development 3}
@@ -109,7 +118,7 @@ condimentum accumsan viverra.
     4 & AAA & BBB & CCC & DDD & EEE & FFF & GGG & HHH \\
     5 & AAA & BBB & CCC & DDD & EEE & FFF & GGG & HHH \\
   \end{tabular}
-  \caption{Uma coluna}
+  \caption{One column}
   \label{tab:one}
 \end{table*}
 
