--- a/templates/template-genos-technical-report.tex
+++ b/templates/template-genos-technical-report.tex
@@ -16,6 +16,16 @@
 \TRyear{December, 2010}
 \TRnumber{1}
 
+%% abstract
+\summary{
+  Sed scelerisque, est in pellentesque porta, orci turpis sollicitudin
+  ligula, a pharetra lectus justo at lacus. Mauris dolor sem, tempus
+  eget tempor sit amet, dignissim eget odio. Fusce eget elementum
+  metus. Nulla mattis velit vel elit tempor sit amet interdum tortor
+  condimentum. In hac habitasse platea dictumst. Donec sit amet arcu
+  mi.
+}
+
 \begin{document}
 
 \cover{}
