--- a/templates/projeto-tese/corpoDoTexto.tex
+++ b/templates/projeto-tese/corpoDoTexto.tex
@@ -174,10 +174,9 @@ O cronograma deste projeto está organizado em semestres e inclui as seguintes t
   
   \end{tabular}
 \end{center}
-% De acordo com \cite{straus07:voice}, blablabla.
 
 %% Inserir itens da bibliografia não citados no texto
-\nocite{straus90:introduction}
+\nocite{*}
 
 %% Desnecessário inserir isso. Serve para o Emacs:
 %% (setq reftex-default-bibliography '("references.bib"))
