--- a/templates/projeto-tese/projeto.tex
+++ b/templates/projeto-tese/projeto.tex
@@ -7,14 +7,13 @@
 \area{Composição}
 \lugar{Salvador}
 \orientador{Prof. Dr. Orientador}
-% \mes{Dezembro}
 
 \begin{document}
 \maketitle
 
-%% sumário
-\setcounter{tocdepth}{3}
-\tableofcontents
+%% Sumário opcional (descomente para usar)
+% \setcounter{tocdepth}{3}
+% \tableofcontents
 
 \input{corpoDoTexto}
 
