--- a/templates/tese-doutorado/tese-doutorado.tex
+++ b/templates/tese-doutorado/tese-doutorado.tex
@@ -62,10 +62,14 @@
 \bancavEstudo{Universidade Federal da Bahia}
 \bancavAtuacao{Universidade de Brasília}
 
-% ficha catalográfica
+% ficha catalográfica. Comente cutter para remover ficha
+\cutter{Cutter}
+\cdd{cdd}
+\cdu{cdu}
 \chavei{Composição (Música)}
 \chaveii{Teoria musical}
-\chaveiii{Título}
+\chaveiii{Contornos Musicais}
+\chaveiv{Título}
 
 \begin{document}
 
