Remove trema de sobrenome

--- a/bib/bib.bib
+++ b/bib/bib.bib
@@ -6570,7 +6570,7 @@
 }
 
 @InProceedings{	  kroger.ea06:processo,
-  author =       {Pedro Kröger and Marcos Sampaio and {Givaldo de}
+  author =       {Pedro Kroger and Marcos Sampaio and {Givaldo de}
                   Cidra},
   title =        {O processo de desenvolvimento de uma codificação
                   para definir estruturas musicais},
