--- a/bib/ismir.bib
+++ b/bib/ismir.bib
@@ -4972,7 +4972,7 @@
 }
 
 @InProceedings{	  kroger04:csoundxml,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {CsoundXML: a meta-language in XML for sound
                   synthesis},
   booktitle =    proc-ismir2004,
