--- a/bib/kroger/kroger-book-chapter-en.bib
+++ b/bib/kroger/kroger-book-chapter-en.bib
@@ -1,5 +1,5 @@
 @InCollection{kroger01:exortacao,
-  author       = {Pedro Kröger},
+  author       = {Pedro Kroger},
   title        = {Comentários Analíticos de Exortação Agonica de
                   Milton Gomes [An analysis of Milton Gomes's
                   Exortação Agonica]},
@@ -14,8 +14,8 @@
                   UFBA}}
 
 @incollection{kroger94:burocracia,
-  author       = {Pedro Kröger},
-  editor       = {Pedro Kröger},
+  author       = {Pedro Kroger},
+  editor       = {Pedro Kroger},
   booktitle    = {A Música de Jamary Oliveira: Estudos Analíticos},
   title        = {Burocracia: uma visão geral [An analysis of Jamary Oliveira's Burocracia]},
   year         = 1994,
