--- a/bib/kroger/kroger-conference-en.bib
+++ b/bib/kroger/kroger-conference-en.bib
@@ -1,18 +1,18 @@
 @InProceedings{kroger08a:rameau,
-  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
+  author =       {Pedro Kroger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
   title =        {Rameau: A System for Automatic Harmonic Analysis},
   note = {To appear in the Proceedings of the 2008 International
                   Computer Music Conference},
   year =      2008}
 
 @InProceedings{kroger08:musicologia,
-  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
+  author =       {Pedro Kroger and Alexandre Passos and Marcos Sampaio and Givaldo de Cidra},
   title =        {Musicologia computacional aplicada à análise dos corais de Bach [Computational musicology applied to the analysis of Bach's Chorales]},
   note = {To appear in the Proceedings of the XVIII ANPPOM congress},
   year =      2008}
 
 @InProceedings{kroger07:programacao,
-  author = 	 {Pedro Kröger},
+  author = 	 {Pedro Kroger},
   title = 	 {Programação avançada em Common Lisp: Linguagens de
                   Domínio Específico e Meta-programação [Advanced
                   programming in Common Lisp: specific domain
@@ -23,7 +23,7 @@
 
 
 @InProceedings{kroger06:processo,
-  author = 	 {Pedro Kröger and Marcos di Silva and Givaldo de Cidra},
+  author = 	 {Pedro Kroger and Marcos di Silva and Givaldo de Cidra},
   title = 	 {O processo de desenvolvimento de uma codificação
                   para definir estruturas musicais [The process of
                   developing a codification for musical structures]},
@@ -32,7 +32,7 @@
 
 
 @InProceedings{kroger05a:desenvolvimento,
-  author = 	 {Pedro Kröger},
+  author = 	 {Pedro Kroger},
   title = 	 {Desenvolvimento e implementação de uma linguagem de
                   descrição de alto-nível, extensível e conectável,
                   para composição musical com sistemas de afinação
@@ -43,7 +43,7 @@
   year = 	 2005}
 
 @InProceedings{kroger05b:desenvolvimento,
-  author = 	 {Pedro Kröger},
+  author = 	 {Pedro Kroger},
   title = 	 {Desenvolvimento e implementação de uma linguagem de
                   descrição de alto-nível, extensível e conectável,
                   para composição musical com sistemas de afinação
@@ -55,7 +55,7 @@
   year = 	 2005}
 
 @InProceedings{kroeger04a:csoundxml,
-  author = 	 {Pedro Kröger},
+  author = 	 {Pedro Kroger},
   title = 	 {CsoundXML: a meta-language in {XML} for sound synthesis},
   booktitle =	 proc # " 2004 " # icmc,
   year =	 2004,
@@ -64,7 +64,7 @@
 }
 
 @InProceedings{kroger03:mega-intruments,
-  author       = {Pedro Kröger},
+  author       = {Pedro Kroger},
   title        = {Definindo Mega-instrumentos com XML [Defining
                   Mega-instruments with {XML}]},
   booktitle    = {Anais do XIV Congresso da ANPPOM},
@@ -72,7 +72,7 @@
 }
 
 @InProceedings{kroger03a:events,
-  author = 	 {Pedro Kröger},
+  author = 	 {Pedro Kroger},
   title = 	 {From the concept of sections to events in Csound},
   booktitle =	 proc # " 2003 " # icmc,
   pages =	 {},
@@ -82,7 +82,7 @@
 }
 
 @InProceedings{kroger03b:events,
-  author = 	 {Pedro Kröger},
+  author = 	 {Pedro Kroger},
   title = 	 {From the concept of sections to events in Csound},
   booktitle =	 {Anais do XV Congresso da ANPPOM},
   pages =	 {},
@@ -90,7 +90,7 @@
 }
 
 @InProceedings{kroger00:organizando,
-  author       = {Pedro Kröger},
+  author       = {Pedro Kroger},
   title        = {Organizando instrumentos do Csound usando macros
                   [Organazing csound instruments using macros]},
   booktitle    = {IIIa Conferencia Iberoamericana de Investigacion
@@ -102,7 +102,7 @@
 }
 
 @article{kroger99:centricidade,
-  author       = {Pedro Kröger},
+  author       = {Pedro Kroger},
   title        = {Centricidade e outros procedimentos na Fantasia de Wellington Gomes},
   journal      = {Anais do XI Encontro Nacional da ANPPOM},
   pages = 	 {150-155},
