--- a/bib/kroger/kroger-journal-en.bib
+++ b/bib/kroger/kroger-journal-en.bib
@@ -1,5 +1,5 @@
 @Article{kroger08:using,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Using Emacs and Csound-x as a Csound IDE: part I},
   journal =      {Csound Journal},
   year =         2008,
@@ -9,7 +9,7 @@
   url =          {http://www.csounds.com/journal/issue9/csoundGNUMake.html}}
 
 @Article{kroger08:managing,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Managing Csound Compositions with {GNU} {M}ake},
   journal =      {Csound Journal},
   year =         2008,
@@ -18,7 +18,7 @@
   url =          {http://www.csounds.com/journal/issue8/csoundGNUMake.html}}
 
 @article{kroger98:expressionismo,
-  author       = {Pedro Kröger},
+  author       = {Pedro Kroger},
   title        = {Expressionismo musical não-serialista [The non-serial expressionism]},
   journal      = {Urucungo: Periódico on-line de música},
   year         = 1998,
@@ -26,7 +26,7 @@
 }
 
 @article{kroger99:procedimentos,
-  author       = {Pedro Kröger},
+  author       = {Pedro Kroger},
   title        = {Procedimentos Composicionais no Rudepodema de
                   Villa-Lobos [compositional procedures in Villa-lobos's Rudepoema]},
   journal      = {Ictus, Periódico do Programa de Pós-Graduação em
