--- a/bib/kroger/kroger-phd-en.bib
+++ b/bib/kroger/kroger-phd-en.bib
@@ -1,5 +1,5 @@
 @PhdThesis{kroger04:desenvolvendo,
-  author       = {Pedro Kröger},
+  author       = {Pedro Kroger},
   title        = {Desenvolvendo uma meta-linguagem para síntese sonora
                   [Developing a meta-language for sound synthesis]},
   school       = {Federal University at Bahia, Brazil},
