--- a/bib/kroger/kroger.bib
+++ b/bib/kroger/kroger.bib
@@ -19,7 +19,7 @@
 @comment {falta Resumos publicados em anais de congressos}
 
 @Article{kroger08:managing,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Managing Csound Compositions with {GNU} {M}ake},
   journal =      {Csound Journal},
   year =         2008,
@@ -30,7 +30,7 @@
 }
 
 @InProceedings{kroger07:programacao,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Programação avançada em Common Lisp: Linguagens de
                   Domínio Específico e Meta-programação},
   booktitle =    {Proceedings of the XI Brazilian Symposium on
@@ -40,7 +40,7 @@
 }
 
 @InProceedings{kroger06:processo,
-  author =       {Pedro Kröger and Marcos di Silva and Givaldo de
+  author =       {Pedro Kroger and Marcos di Silva and Givaldo de
                   Cidra},
   title =        {O processo de desenvolvimento de uma codificação
                   para definir estruturas musicais},
@@ -49,7 +49,7 @@
 }
 
 @InProceedings{kroger05a:desenvolvimento,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Desenvolvimento e implementação de uma linguagem de
                   descrição de alto-nível, extensível e conectável,
                   para composição musical com sistemas de afinação},
@@ -58,7 +58,7 @@
 }
 
 @InProceedings{kroger05b:desenvolvimento,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Desenvolvimento e implementação de uma linguagem de
                   descrição de alto-nível, extensível e conectável,
                   para composição musical com sistemas de afinação},
@@ -69,7 +69,7 @@
 }
 
 @TechReport{kroger04:temperamentos,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Desenvolvimento e implementação de uma linguagem de
                   descrição de alto-nível, extensível e conectável,
                   para composição musical com sistemas de afinação},
@@ -80,7 +80,7 @@
 }
 
 @PhdThesis{kroger04:desenvolvendo,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Desenvolvendo uma meta-linguagem para síntese
                   sonora},
   school =       {Federal University at Bahia, Brazil},
@@ -89,7 +89,7 @@
 }
 
 @InProceedings{kroeger04a:csoundxml,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {CsoundXML: a meta-language in {XML} for sound
                   synthesis},
   booktitle =    proc # " 2004 " # icmc,
@@ -99,7 +99,7 @@
 }
 
 @InProceedings{kroeger04b:csoundxml,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {CsoundXML: a meta-language in {XML} for sound
                   synthesis},
   booktitle =    {Proceedings of the 5th International Conference on
@@ -108,14 +108,14 @@
 }
 
 @InProceedings{kroger03:mega-intruments,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Definindo Mega-instrumentos com XML},
   booktitle =    {Anais do XIV Congresso da ANPPOM},
   year =         2003
 }
 
 @InProceedings{kroger03a:events,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {From the concept of sections to events in Csound},
   booktitle =    proc # " 2003 " # icmc,
   year =         2003,
@@ -124,14 +124,14 @@
 }
 
 @InProceedings{kroger03b:events,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {From the concept of sections to events in Csound},
   booktitle =    {Anais do XV Congresso da ANPPOM},
   year =         2003,
 }
 
 @incollection{kroger00:allegro,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   booktitle =    {Compositores da Bahia},
   title =        {Introdução e Allegro, para conjunto de câmara},
   year =         2000,
@@ -139,7 +139,7 @@
 }
 
 @incollection{kroger00:amore,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   booktitle =    {Compositores da Bahia},
   title =        {Amore et Dolore, para clarinete solo},
   year =         2000,
@@ -147,7 +147,7 @@
 }
 
 @incollection{kroger00:crepusculo,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   booktitle =    {Clarineta Solo},
   title =        {Ao Crepúsculo},
   year =         2000,
@@ -155,7 +155,7 @@
 }
 
 @incollection{kroger00:cancoes,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   booktitle =    {Compositores da Bahia},
   title =        {Canções à Meia-noite, para voz, clarinete e piano},
   year =         2000,
@@ -163,7 +163,7 @@
 }
 
 @InProceedings{kroger00:organizando,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Organizando instrumentos do Csound usando macros},
   booktitle =    {IIIa Conferencia Iberoamericana de Investigacion
                   Musical},
@@ -174,7 +174,7 @@
 }
 
 @incollection{kroger00:sinfonia,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   booktitle =    {Compositores da Bahia},
   title =        {Sinfonia em um Movimento},
   year =         2000,
@@ -182,7 +182,7 @@
 }
 
 @InCollection{kroger01:exortacao,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Comentários Analíticos de Exortação Agonica de
                   Milton Gomes},
   editor =       {Pablo Sotuyo},
@@ -197,7 +197,7 @@
 }
 
 @InCollection{kroger01:amore2,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Amore et Dolore II},
   booktitle =    {Música Eletro-acústica na Bahia},
   year =         2001,
@@ -206,7 +206,7 @@
 }
 
 @InCollection{kroger01:spiritus,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Spiritus ubi vult spirat},
   booktitle =    {Música Eletro-acústica na Bahia},
   year =         2001,
@@ -215,8 +215,8 @@
 }
 
 @incollection{kroger94:burocracia,
-  author =       {Pedro Kröger},
-  editor =       {Pedro Kröger},
+  author =       {Pedro Kroger},
+  editor =       {Pedro Kroger},
   booktitle =    {A Música de Jamary Oliveira: Estudos Analíticos},
   title =        {Burocracia: uma visão geral},
   year =         1994,
@@ -230,7 +230,7 @@
 }
 
 @article{kroger98:expressionismo,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Expressionismo musical não-serialista},
   journal =      {Urucungo: Periódico on-line de música},
   year =         1998,
@@ -239,14 +239,14 @@
 }
 
 @book{kroger98:valsa,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Valsa e Choro, Para banda sinfônica},
   year =         1998,
   publisher =    {Escola de Música Villa-Lobos}
 }
 
 @article{kroger99:centricidade,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Centricidade e outros procedimentos na {\it
                   Fantasia} de Wellington Gomes},
   journal =      {Anais do XI Encontro Nacional da ANPPOM},
@@ -255,7 +255,7 @@
 }
 
 @article{kroger99:procedimentos,
-  author =       {Pedro Kröger},
+  author =       {Pedro Kroger},
   title =        {Procedimentos Composicionais no Rudepodema de
                   Villa-Lobos},
   journal =      {Ictus, Periódico do Programa de Pós-Graduação em
