--- a/bib/kroger/old-bib.bib
+++ b/bib/kroger/old-bib.bib
@@ -9,7 +9,7 @@
 @INPROCEEDINGS{kroger05:codificacao,
    YEAR = {2005},
    PAGES = {307--310},
-   AUTHOR = {Pedro Kröger },
+   AUTHOR = {Pedro Kroger },
    BOOKTITLE = {Proceedings of the 10th Brazilian Symposium on Computer Music},
    TITLE = {
 Desenvolvimento e implementação de uma codificação para definir
@@ -2727,7 +2727,7 @@ Projeto de pesquisa na modalidade Desenvolvimento
 Desenvolvimento e implementação de uma linguagem de
      descrição de alto-nível, extensível e conectável, para
      composição musical com sistemas de afinação},
-   AUTHOR = {Pedro Kröger },
+   AUTHOR = {Pedro Kroger },
    YEAR = {2003},
 }
 @BOOK{rameau71:treatise,
