--- a/bib/genos.bib
+++ b/bib/genos.bib
@@ -1,5 +1,5 @@
 @InProceedings{	  kroger08:musicologia,
-  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio
+  author =       {Pedro Kroger and Alexandre Passos and Marcos Sampaio
                   and Givaldo de Cidra and Nathanael de Souza Ourives
                   and Emerson Soares dos Anjos and Wallace Silva dos
                   Santos},
@@ -11,7 +11,7 @@
 }
 
 @InProceedings{	  kroger08:rameau,
-  author =       {Pedro Kröger and Alexandre Passos and Marcos Sampaio
+  author =       {Pedro Kroger and Alexandre Passos and Marcos Sampaio
                   and Givaldo de Cidra},
   title =        {Rameau: A System for Automatic Harmonic Analysis},
   booktitle =    {Proceedings of the 2008 International Computer Music
@@ -22,7 +22,7 @@
 }
 
 @InProceedings{	  kroger.ea06:processo,
-  author =       {Pedro Kröger and Marcos di Silva and Givaldo de
+  author =       {Pedro Kroger and Marcos di Silva and Givaldo de
                   Cidra},
   title =        {O processo de desenvolvimento de uma codificação
                   para definir estruturas musicais},
@@ -32,7 +32,7 @@
 }
 
 @Unpublished{	  passos08:effect,
-  author =       {Alexandre Passos and Pedro Kröger and Marcos Sampaio
+  author =       {Alexandre Passos and Pedro Kroger and Marcos Sampaio
                   and Givaldo de Cidra},
   title =        {The effect of incorporating enharmonic information
                   on chord labeling algorithms},
@@ -42,7 +42,7 @@
 }
 
 @Unpublished{	  passos08:evaluation,
-  author =       {Alexandre Passos and Pedro Kröger and Marcos Sampaio
+  author =       {Alexandre Passos and Pedro Kroger and Marcos Sampaio
                   and Givaldo de Cidra},
   title =        {An evaluation of some algorithms for symbolic chord
                   labeling},
@@ -52,7 +52,7 @@
 }
 
 @InProceedings{	  passos.ea09:functional,
-  author =       {Alexandre Passos and Marcos Sampaio and Pedro Kröger
+  author =       {Alexandre Passos and Marcos Sampaio and Pedro Kroger
                   and Givaldo de Cidra},
   title =        {Functional Harmonic Analysis and Computational
                   Musicology in Rameau},
@@ -75,7 +75,7 @@
 }
 
 @InProceedings{	  sampaio.ea09:goiaba,
-  author =       {Marcos Sampaio and Pedro Kröger},
+  author =       {Marcos Sampaio and Pedro Kroger},
   title =        {Goiaba: a software to process musical contours},
   booktitle =    {Proceedings of the 12th Brazilian Symposium on
                   Computer Music},
@@ -85,7 +85,7 @@
 }
 
 @Unpublished{     sampaio.ea09:musical,
-  author =       {Marcos Sampaio and Pedro Kröger},
+  author =       {Marcos Sampaio and Pedro Kroger},
   title =        {Musical contour in composition},
   note =         {Unpublished paper available on request},
   year =         2009,
@@ -93,14 +93,14 @@
 }
 
 @Misc{sampaio.ea10:villa-lobos,
-  author =    {Marcos Sampaio and Pedro Kröger},
+  author =    {Marcos Sampaio and Pedro Kroger},
   title =     {Villa-Lobos Contour Module},
   howpublished = {Available at \url{http://genos.mus.br/villa-lobos/contour-module}},
   month =     {May},
   year =      2010}
 
 @PhDThesis{       kroger04:desenvolvendo,
-  author        = {Pedro Ribeiro Kröger Júnior},
+  author        = {Pedro Ribeiro Kroger Júnior},
   title         = {Desenvolvendo uma meta-linguagem para síntese sonora},
   school        = {Universidade Federal da Bahia},
   year          = 2004,
